--- a/planner/src/main/resources/application.properties
+++ b/planner/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/planner
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
